# mavlink-gphoto

./: Cargo.toml  camera.xml
src/: _main.rs  main.rs  mavlink_camera.rs
