[package]
name = "camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
heapless = "0.7.16"
mavlink = { version = "0.11.2", features = ["default", "emit-extensions"] }
sys-info = "0.9.1"
